SWAGGER => Ajout de route pour ajouter un commentaire et correction de gestion d'erreurs des prommesses
