# API_SERVER/service/AnnounceService.js
@@ -12,7 +12,7 @@ exports.findAnnounces = function() {
             let send = resp[Object.keys(resp)[0]] 
             resolve(send);
           }).catch( function( err ) {
-            reject();
+            reject(err);
           } );
     });
 }
@@ -28,11 +28,16 @@ exports.findAnnounce = function(id) {
         _id: id
       }).then( function( announce ) {
         let resp = {};
+        if( announce == null ) {
+          const error = new Error('Announce not found');
+          error.status = 404;
+          reject(error);
+        }
         resp['application/json'] = announce;
         let send = resp[Object.keys(resp)[0]] 
         resolve(send);
       }).catch( function( err ) {
-        reject();
+        reject(err);
       } );
   });
 }
@@ -69,5 +74,37 @@ exports.deleteAnnounce = function(id) {
     } catch( error ) {
       reject(error);
     }
+  });
+}
+
+exports.addCommentary = function(body, id) {
+  return new Promise(function(resolve, reject) {
+    Announce.findById(id).then( announce => {
+      if(!announce) {
+        const error = new Error('Announce not found');
+        error.status = 404;
+        reject(error);
+      }
+
+      const newComment = {
+        user_id: body.user_id,
+        history: [ {
+          id_user: body.user_id,
+          content: body.commentary,
+          date: new Date(),
+          read: false
+        } ]
+      };
+      announce.comments.push(newComment)
+      
+      const filter = { _id:  announce._id };
+      Announce.findOneAndReplace( filter, announce ).then( r => {
+        resolve();
+      }).catch( err => {
+        reject(err);
+      });
+    } ).catch( err => {
+      reject( err );
+    })
   });
 }
